discussion/kv_engine/179778/179778_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46740: Remove OutstandingItemsResult::diskCheckpointState

And use the HCS that is already present in
OutstandingItemsResult::ranges.

Change-Id: I6a0588b46e01a9a3ae367386cd2003b39192cf3f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-09-09 08:48:23.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-09 08:50:47.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49189/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49189/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41347/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41347/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9919/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9919/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10016/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10016/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22540/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22540/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21522/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21522/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22183/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22183/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23290/ : ABORTED

Compile error at [2022-09-09T08:50:29.553Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60:
error: expected ";" after expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23290/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23290/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30578/ : ABORTED

Compile error at [2022-09-09T08:50:21.890Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60:
error: expected ";" after expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30578/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30578/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19433/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/active_stream.cc b/engines/ep/src/dcp/active_stream.cc
index 4a56dfe4b..617fb8579 100644
--- a/engines/ep/src/dcp/active_stream.cc
+++ b/engines/ep/src/dcp/active_stream.cc
@@ -1286,12 +1286,12 @@ void ActiveStream::processItems(
         }
 
         if (!mutations.empty()) {
-            Expects(!outstandingItemsResult.ranges.empty())
-            snapshot(outstandingItemsResult.checkpointType,
-                     mutations,
-                     outstandingItemsResult.ranges.begin()-&gt;highCompletedSeqno,
-                     visibleSeqno,
-                     highNonVisibleSeqno);
+            Expects(!outstandingItemsResult.ranges.empty()) snapshot(
+                    outstandingItemsResult.checkpointType,
+                    mutations,
+                    outstandingItemsResult.ranges.begin()-&gt;highCompletedSeqno,
+                    visibleSeqno,
+                    highNonVisibleSeqno);
         } else if (isSeqnoAdvancedEnabled()) {
             // Note that we cannot enter this case if supportSyncReplication()
             // returns true (see isSeqnoAdvancedEnabled). This means that we
@@ -1376,12 +1376,11 @@ bool ActiveStream::shouldProcessItem(const Item&amp; item) {
     return true;
 }
 
-void ActiveStream::snapshot(
-        CheckpointType checkpointType,
-        std::deque&lt;std::unique_ptr&lt;DcpResponse&gt;&gt;&amp; items,
-        std::optional&lt;uint64_t&gt; hcs,
-        uint64_t maxVisibleSeqno,
-        std::optional&lt;uint64_t&gt; highNonVisibleSeqno) {
+void ActiveStream::snapshot(CheckpointType checkpointType,
+                            std::deque&lt;std::unique_ptr&lt;DcpResponse&gt;&gt;&amp; items,
+                            std::optional&lt;uint64_t&gt; hcs,
+                            uint64_t maxVisibleSeqno,
+                            std::optional&lt;uint64_t&gt; highNonVisibleSeqno) {
     if (items.empty()) {
         return;
     }

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19433/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20212/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60: error: expected ";" after expression [clang-diagnostic-error]
            Expects(!outstandingItemsResult.ranges.empty())
                                                           ^
                                                           ;

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20212/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60:
error: expected ";" after expression [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20212/ )
----------------------------------------------------------------------------------------------------------------------
